force-app/main/default/objects/EventActionPlan__c/EventActionPlan__c.object-meta.xml
<CustomObject>
    <description>QCC:  CJM will enter the plans to overcome the event.</description>
    <label>Event Action Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Action Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>