force-app/main/default/objects/EventActionPlan__c/fields/ActionCompleted__c.field-meta.xml
<CustomField>
    <fullName>ActionCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IOC Action Completed check box.</description>
    <label>Action Completed</label>
    <type>Checkbox</type>
</CustomField>