force-app/main/default/objects/EventActionPlan__c/fields/CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedDateTime__c</fullName>
    <description>IOC: Action Completed Date Time.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed DateTime</label>
    <type>DateTime</type>
</CustomField>