force-app/main/default/objects/EventActionPlan__c/fields/Customer_Communications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communications_Sent__c</fullName>
    <description>QCC: Customer Communications Sent</description>
    <label>Customer Communications Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>