force-app/main/default/objects/EventActionPlan__c/fields/Delay_Letter__c.field-meta.xml
<CustomField>
    <fullName>Delay_Letter__c</fullName>
    <description>QCC: Delay Letter</description>
    <label>Delay Letter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>