force-app/main/default/objects/EventActionPlan__c/fields/Delay_Letter_Example__c.field-meta.xml
<CustomField>
    <fullName>Delay_Letter_Example__c</fullName>
    <description>QCC: Delay Letter Example</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delay Letter Comments</label>
    <type>Url</type>
</CustomField>