force-app/main/default/objects/EventActionPlan__c/fields/Eligibility_Comments__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>