force-app/main/default/objects/EventActionPlan__c/fields/Eligibility_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Indicator__c</fullName>
    <label>Eligibility Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>