force-app/main/default/objects/EventActionPlan__c/fields/Expense_Claim_Guide__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Guide__c</fullName>
    <label>Expense Claim Guide</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>