force-app/main/default/objects/EventActionPlan__c/fields/Expense_Claim_Guide_Comments__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Guide_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expense Claim Guide Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>