force-app/main/default/objects/EventActionPlan__c/fields/FlightEvent__c.field-meta.xml
<CustomField>
    <fullName>FlightEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Lookup to Flight Event</description>
    <label>Flight Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Action Plans</relationshipLabel>
    <relationshipName>Recovery_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>