force-app/main/default/objects/EventActionPlan__c/fields/HasAccess__c.field-meta.xml
<CustomField>
    <fullName>HasAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in backend</description>
    <label>HasAccess</label>
    <type>Checkbox</type>
</CustomField>