force-app/main/default/objects/EventActionPlan__c/fields/Inbound_Connecting_Passenger_Summary__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Connecting_Passenger_Summary__c</fullName>
    <description>QCC: Inbound Connecting Passenger Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inbound Connecting Passenger Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>