force-app/main/default/objects/EventActionPlan__c/fields/OptionSelected__c.field-meta.xml
<CustomField>
    <fullName>OptionSelected__c</fullName>
    <description>IOC: Option Selected for the action</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Option Selected</label>
    <length>225</length>
    <type>Text</type>
</CustomField>