force-app/main/default/objects/EventActionPlan__c/fields/Outbound_Connecting_Passenger_Summary__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Connecting_Passenger_Summary__c</fullName>
    <description>QCC:Outbound Connecting Passenger Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Outbound Connecting Passenger Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>