force-app/main/default/objects/EventActionPlan__c/fields/Policy_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Policy_Waiver__c</fullName>
    <description>QCC: Policy Waiver</description>
    <label>Policy Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>