force-app/main/default/objects/EventActionPlan__c/fields/Policy_Waiver_Location__c.field-meta.xml
<CustomField>
    <fullName>Policy_Waiver_Location__c</fullName>
    <description>QCC: Policy Waiver Location</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Waiver Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>