force-app/main/default/objects/EventActionPlan__c/fields/Reaccommodation_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Reaccommodation_Instructions__c</fullName>
    <description>QCC: Reaccommodation Instructions</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reaccommodation Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>