force-app/main/default/objects/EventActionPlan__c/fields/Refreshment_Voucher_Amount_AUD_per_pax__c.field-meta.xml
<CustomField>
    <fullName>Refreshment_Voucher_Amount_AUD_per_pax__c</fullName>
    <description>QCC: Refreshment Voucher Amount (AUD per person)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport Voucher Amount (per pax)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>