force-app/main/default/objects/EventActionPlan__c/fields/Refunds__c.field-meta.xml
<CustomField>
    <fullName>Refunds__c</fullName>
    <description>CCC: Refunds</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refunds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>