force-app/main/default/objects/EventActionPlan__c/recordTypes/CCC_CJM.recordType-meta.xml
<RecordType>
    <fullName>CCC_CJM</fullName>
    <active>true</active>
    <description>CCC CJM Section</description>
    <label>CCC CJM</label>
</RecordType>