force-app/main/default/objects/EventActionPlan__c/recordTypes/CCC_Duty_Manager.recordType-meta.xml
<RecordType>
    <fullName>CCC_Duty_Manager</fullName>
    <active>true</active>
    <description>CCC: Duty Manager Inputs</description>
    <label>CCC Duty Manager</label>
</RecordType>