force-app/main/default/objects/EventActionPlan__c/listViews/CCC_CJM_Queue_EventActionPlan.listView-meta.xml
<ListView>
    <fullName>CCC_CJM_Queue_EventActionPlan</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC CJM Queue</label>
    <queue>CCC_CJM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>