force-app/main/default/objects/EventActionPlan__c/listViews/CCC_CJO_DM_Queue_EventActionPlan.listView-meta.xml
<ListView>
    <fullName>CCC_CJO_DM_Queue_EventActionPlan</fullName>
    <filterScope>Queue</filterScope>
    <label>CCC CJO DM</label>
    <queue>CCC_CJO_DM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>